# ansible-galaxy-cookiecutter

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  cookiecutter.json  cspell.json  post-commit  pyproject.toml
.cookiecutter_includes/workflows/: contributor-assistant.j2
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  z-developer-issue.yml
.github/workflows/: black-format.yml  cla.yml  dependency-check.yml  format-check.yml  jekyll-gh-pages.yml  jinja2-lint.yml  lint-check.yml  ruff-lint.yml  security-audit.yml  security-check.yml  spellcheck.yml  test.yml  tests.yml  tomllint-check.yml  typecheck.yml  yaml-lint.yml
changelogs/: CHANGELOG.md  changelog.yml
changelogs/releases/: v0.1.0.md  v0.1.0.yml  v0.1.1.md
docs/: cookiecutter_input.json
docs/jekyll/: .gitignore  Makefile  README.md  _config.yml  index.md
docs/jekyll/_manual/contribute/: create-feature-request.md  create-pull-request.md  developer-guide.md  index.md
docs/jekyll/_manual/developer-resources/: cla-privacy-policy.md  cla.md  contribute.md  index.md
docs/jekyll/_manual/introduction/: getting-started.md  index.md  installation-guide.md
docs/jekyll/_manual/setup-guide/: index.md  requirements.md
docs/jekyll/_manual/troubleshooting/: faq.md  index.md
docs/jekyll/_manual/tutorials/: index.md
docs/jekyll/_manual/upgrade-guide/: index.md
docs/jekyll/_manual/whatsnew/: index.md
docs/jekyll/_resources/: repository-link.md
docs/jekyll/docs/: cookiecutter_input.json
hooks/: __init__.py  docs.py  post_gen_project.py  post_gen_projects.py  pre_gen_project.py
hooks/post_gen_logic/: docs.py  utils.py
tests/: test_bake_project.py
{{ cookiecutter.package_name }}/: .ansible-lint  .ansible-lint-ignore  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  autodoc.config.yaml  cliff.toml  cspell.json  galaxy.yml  pyproject.toml
{{ cookiecutter.package_name }}/.github/workflows/: dependency-check.yml  format-check.yml  generate_changelog.yml  lint-check.yml  lint.yml  pages.yml  tests.yml
{{ cookiecutter.package_name }}/_shared_hooks/post_gen_logic/: __init__.py  ansible.py  docs.py  utils.py
{{ cookiecutter.package_name }}/build_utils/: __init__.py  readme_build.py  yaml_front_matter.py
{{ cookiecutter.package_name }}/changelogs/: changelog.yml  config.yaml  {{ cookiecutter.version }}-alpha.yml
{{ cookiecutter.package_name }}/changelogs/fragments/: initial_release_summary.yml
{{ cookiecutter.package_name }}/changelogs/releases/: {{ cookiecutter.version }}.yml
{{ cookiecutter.package_name }}/docs/: cookiecutter_input.json
{{ cookiecutter.package_name }}/plugins/: __init__.py
{{ cookiecutter.package_name }}/tests/unit/: test_yaml_front_matter.py
{{ cookiecutter.project_slug }}/: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  LICENSE.md  Makefile  autodoc.config.yaml  cspell.json  galaxy-importer.cfg  galaxy.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.cookiecutter_includes/: license_header.j2  license_header.jinja
{{ cookiecutter.project_slug }}/.github/: FUNDING.yml  pull_request_template.md
{{ cookiecutter.project_slug }}/.github/workflows/: changelog.yml  dependency-check.yml  format-check.yml  generate_changelog.yml  jekyll-gh-pages.yml  lint-check.yml  pages.yml  release.yml  security-audit.yml  spellcheck.yml  tests.yml  typecheck.yml  {{ cookiecutter.contribution_model | lower }}.yml
{{ cookiecutter.project_slug }}/changelogs/: config.yaml
{{ cookiecutter.project_slug }}/changelogs/fragments/: initial_release_summary.yml
{{ cookiecutter.project_slug }}/meta/: runtime.yml
{{ cookiecutter.project_slug }}/plugins/modules/: test.py
