# pyproject.toml
# =========================================
# Project: ansible-galaxy-cookiecutter
# =========================================
[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible_galaxy_cookiecutter"
version = "0.1.0"
description = "Ansible Galaxy cookiecutter template + integration with (github-docs-cookiecutter) Github docs template generation."
authors = [
    { name="Jared Cook", email="jcook3701+github@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "nutri-matic>=0.1",
]
keywords = [
  "ansible",
  "galaxy",
  "cookiecutter",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcook3701/ansible-galaxy-cookiecutter"
Repository = "https://github.com/jcook3701/ansible-galaxy-cookiecutter"
Documentation = "https://github.com/jcook3701/ansible-galaxy-cookiecutter/docs/jekyll"

# Maybe upgrade to python 3.12 in future: "pyproject>=1!0.1.2",
[project.optional-dependencies]
dev = [
  "bump-my-version>=1.2",
  "black>=25.11",
  "codespell>=2.4",
  "coverage>=7.12",
  "deptry>=0.24",
  "json-lint-tools>=0.1",
  "jinja2-cli>=0.8",
  "mypy==1.9",
  "pip-audit>=2.10",
  "pre-commit>=4.5",
  "pytest>=9.0",
  "pytest-cookies>=0.7",
  "pytest-cov>=7.0",
  "ruff>=0.14.0",
  "tomllint>=0.3",
  "typer>=0.20",
  "yamllint>=1.0",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]

# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "hooks",
]
include = [
  "hooks*",
]
# ====================================
# Codespell Configuration:
# ====================================
[tool.codespell]
# files/patterns to ignore
skip = ["*.svg", "*.css", "*.html"]

# words to ignore globally
ignore-words-list = ["crate", "ba"]

# extra options
check-filenames = true
quiet-level = 2
# ====================================
# Deptry Configuration:
# ====================================
[tool.deptry]
ignore_notebooks = true
exclude = [
    "tests/*",
    "build/*",
    "docs/*",
]
# ====================================
# Ruff Configuration:
# ====================================
[tool.ruff]
# Target Python version
target-version = "py311"
# Directories to lint and format
src = [
  "hooks",
  "tests",
  "{{ cookiecutter.package_name }}/tests",
]
# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
  "{{ cookiecutter.package_name }}/pyproject.toml",
]
# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]
# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
  "RUF200", # invalid pyproject.toml file that does not conform to the relevant specifications (PEPs)
]
# ====================================
# Import Sorting Configuration: (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ansible_galaxy_cookiecutter"]
# ====================================
# Formatter Configuration:
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Mypy (type-checker) Configuration:
# ====================================
[tool.mypy]
python_version = "3.11"
mypy_path = [
  "hooks",
  "tests",
]
strict = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest Configuration:
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
  "{{ cookiecutter.package_name }}",
  "hooks",
]
