# pyproject.toml
# =========================================
# Project: {{ cookiecutter.package_name }}
# =========================================
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter. version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name="{{ cookiecutter.author }}", email="{{ cookiecutter.email }}" }
]
readme = "./README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">={{ cookiecutter.config.requires_python }}"
dependencies = []
keywords = [
  "ansible",
  "galaxy",
  "scripts",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.package_name }}"
Repository = "https://github.com/{{ cookiecutter.package_name }}"
Documentation = "https://github.com/{{ cookiecutter.package_name }}/docs/jekyll"

[project.optional-dependencies]
dev = [
  "ansible>=12.0",
  "ansible-core>=2.0",
  "pytest>=9.0",
]
lint = [
  "ruff>=0.14.0",
  "mypy==1.9",
  "ansible-lint>=25.0",
  "yamllint>=1.0",

]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
  "ansible-autodoc>=0.5",
  "myst-parser>=0.18",
]
# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "build_utils",
  "plugins",
]
include = [
  "build_utils*",
  "plugins*",
]
# ====================================
# Ruff Configuration: (Linting)
# ====================================
[tool.ruff]
# Target Python version
target-version = "py311"
# Directories to lint and format
src = [
  "build_utils",
  "plugins",
  "library",
  "roles",
  "tests",
]
# Exclude these paths
exclude = [
  "playbooks",
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]
# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]
# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]
# ====================================
# Import Sorting Configuration: (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
  "build_utils",
  "plugins",
  "library",
]
# ====================================
# Formatter Configuration:
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Black Configuration: (Formatting)
# ====================================
[tool.black]
line-length = 88          # Maximum line length (default is 88)
target-version = ["py310"] # Target Python version(s)
skip-string-normalization = false  # Whether to skip normalizing string quotes
include = '\.pyi?$'       # Which files to include (regex)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# ====================================
# Mypy (type-checker) Configuration:
# ====================================
[tool.mypy]
python_version = "{{ cookiecutter.config.requires_python }}"
mypy_path = [
  "build_utils",
  "plugins",
  "library",
]
namespace_packages = true
strict = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest Configuration:
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["build_utils", "plugins", "library"]
