# pyproject.toml
{% import '.cookiecutter_includes/license_header.jinja' as license_macros with context %}
{{ license_macros.license_header(cookiecutter.license, cookiecutter.author, cookiecutter.__project_name, comment_style='hash') }}
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__py_package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name="{{ cookiecutter.author }}", email="{{ cookiecutter.email }}" }
]
readme = "./README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []
keywords = [
  "ansible",
  "galaxy",
  "python3",
  "scripts",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/{{ cookiecutter.project_slug }}/docs/jekyll"

[project.optional-dependencies]
dev = [
  "ansible>=12.0",
  "ansible-core>=2.0",
  "ansible-runner>=2.4",
]
tools = [
  "antsibull-changelog>=0.34",
  "antsichaut>=0.4",
  "bump-my-version>=1.2",
  "black>=25.11",
  "codespell>=2.4",
  "cookiecutter-project-upgrader>=1.3",
  "coverage>=7.12",
  "deptry>=0.24",
  "mypy==1.9",
  "nutri-matic>=0.1",
  "pip-audit>=2.10",
  "pre-commit>=4.5",
  "pytest>=9.0",
  "pytest-ansible>=1.3",
  "pytest-cov>=7.0",
  "ruff>=0.14.0",
  "tomllint>=0.3",
  "yamllint>=1.0",
  "yamlfixer-opt-nc>=0.9",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
  "ansible-autodoc>=0.5",
  "myst-parser>=0.18",
]
# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "plugins",
]
include = [
  "action*",
  "filter*",
  "inventory*",
  "lookup*",
  "module_utils*",
  "modules*",
]
# ====================================
# Version Bumping (bump-my-version):
# ====================================
[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = false
commit = false

[[tool.bumpversion.files]]
filename = "galaxy.yml"
[[tool.bumpversion.files]]
filename = "Makefile"
[[tool.bumpversion.files]]
filename = "./docs/jekyll/Makefile"
[[tool.bumpversion.files]]
filename = "./docs/jekyll/_config.yml"
[[tool.bumpversion.files]]
filename = "./docs/sphinx/conf.py"
# ====================================
# Codespell Configuration:
# ====================================
[tool.codespell]
# files/patterns to ignore
skip = [
  "./changelogs/*",
  "cspell.json",
  "./docs/jekyll/_site",
  "*.svg",
  "*.css",
  "*.html",
  "*.lock",
]

# words to ignore globally
ignore-words-list = ["crate", "ba"]

# extra options
check-filenames = true
quiet-level = 2
# ====================================
# Deptry Configuration:
# ====================================
[tool.deptry]
ignore_notebooks = true
exclude = [
    "tests/*",
    "docs/*",
]
# ====================================
# Ruff Configuration: (Linting)
# ====================================
[tool.ruff]
# Target Python version
target-version = "{{ cookiecutter.__python_target_version }}"
# Directories to lint and format
src = [
  "plugins",
  "roles",
  "tests",
]
# Exclude these paths
exclude = [
  "playbooks",
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]
# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]
# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]
# ====================================
# Import Sorting Configuration: (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
  "plugins",
]
# ====================================
# Formatter Configuration:
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Black Configuration: (Formatting)
# ====================================
[tool.black]
line-length = 88          # Maximum line length (default is 88)
target-version = ["{{ cookiecutter.__python_target_version }}"] # Target Python version(s)
skip-string-normalization = false  # Whether to skip normalizing string quotes
include = '\.pyi?$'       # Which files to include (regex)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# ====================================
# Mypy (type-checker) Configuration:
# ====================================
[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
mypy_path = [
  "plugins",
]
namespace_packages = true
strict = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest Configuration:
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["plugins"]
